--- a/src/app/components/mainlayout/mainlayout.component.css
+++ b/src/app/components/mainlayout/mainlayout.component.css
@@ -9,6 +9,7 @@
 .options--item.active {
     background-color: #88B04B;
     color: white;
+    border-radius: 5px;
 }
 
 .mobile-screen {
@@ -20,7 +21,7 @@
 }
 
 .menu {
-    width: 250px;
+    width: 350px;
     position: fixed;
     top: 0;
     left: 0;
@@ -46,15 +47,15 @@
     position: relative;
     background: #fafbff !important;
     margin: 0;
-    margin-left: 260px;
+    margin-left: 360px;
     flex: 1;
 }
 
 .main :is(section) {
     box-sizing: border-box;
     overflow-y: auto;
-    height: calc(100vh - 66px);
-    padding: 20px 250px;
+    height: calc(100dvh - 66px);
+    padding: 20px 150px;
 }
 
 .main__header {
@@ -104,6 +105,7 @@
 .options--item:hover {
     background-color: #E0E0E0;
     color: #4a5568;
+    border-radius: 5px;
 }
 
 .user-profile {
