--- a/src/app/components/pets/form-pet/form-pet.component.css
+++ b/src/app/components/pets/form-pet/form-pet.component.css
@@ -31,22 +31,14 @@ form {
     flex-direction: column;
 }
 
-.column {
-    display: flex;
-    flex-direction: column;
-}
-
-.custom-select-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+mat-form-field {
+    display: block;
+    margin-bottom: 10px;
 }
 
 .search-field {
     width: calc(100% - 16px);
-    /* Subtraia a margem total (8px em cada lado) */
     margin: 8px;
-    /* Margens laterais */
 }
 
 .button-grou:is(p) {
@@ -64,27 +56,34 @@ mat-form-field {
 
 mat-select-panel {
     max-height: 300px;
-    /* Ajuste a altura máxima do menu para evitar overflow */
     overflow: auto;
-    /* Adiciona uma barra de rolagem se necessário */
 }
+
+
 
 .photo-upload {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-h4 :is(span) {
-    color: #979797;
+    height: 100%;
 }
 
 .photo-upload-container {
-    margin-top: 10px;
+    width: 100%;
     position: relative;
-    width: 150px;
-    height: 150px;
+    margin-top: 10px;
+    max-width: 300px;
+    height: 200px;
+    border: 2px dashed #88B04B;
+    border-radius: 15px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.photo-upload-container:hover {
+    background-color: rgba(136, 176, 75, 0.1);
 }
 
 .photo-upload-container input[type="file"] {
@@ -92,45 +91,39 @@ h4 :is(span) {
 }
 
 .photo-preview {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100%;
-    border-radius: 50%;
-    border: 2px solid #ddd;
-    background-color: #f5f5f5;
-    position: absolute;
-    top: 0;
-    left: 0;
-    cursor: pointer;
+    object-fit: cover;
+    border-radius: 15px;
+    transition: transform 0.3s;
 }
 
 .photo-upload-label {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    border: 2px solid #ddd;
-    background-color: #f5f5f5;
-    position: absolute;
-    top: 0;
-    left: 0;
-    cursor: pointer;
+    position: relative;
 }
 
-.photo-upload-label mat-icon {
-    position: absolute;
-    padding: 6px;
-    bottom: 4px;
-    right: 4px;
-    width: 36px;
-    height: 36px;
-    font-size: 24px;
-    background: var(--green);
-    border-radius: 100%;
-    color: white;
-    z-index: 10;
+.placeholder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #888;
+    text-align: center;
+    height: 100%;
+    transition: opacity 0.3s;
+}
+
+.placeholder i {
+    font-size: 48px;
+    margin-bottom: 10px;
+}
+
+.placeholder span {
+    font-size: 14px;
+    color: #777;
 }
