--- a/src/app/components/pets/info-pet/info-pet.component.css
+++ b/src/app/components/pets/info-pet/info-pet.component.css
@@ -31,19 +31,86 @@
     }
 }
 
-.pet-info :is(h4) {
+.pet-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+    margin-top: 10px;
+}
+
+.pet-info h4 {
+    font-size: 16px;
+    margin: 0;
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
     align-items: center;
-    margin: 10px 0;
-    font-weight: bold;
-    font-size: 14px;
+    margin-top: 5px;
+}
 
-    :is(span) {
-        font-weight: normal;
-        font-size: 14px;
+.pet-info h4 span {
+    font-weight: bold;
+    color: #666;
+}
+
+.medical-info {
+    background: #f5f7fa;
+    border-radius: 12px;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+.medical-info h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #34495e;
+}
+
+.medical-info-text {
+    background: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    max-height: 150px;
+    max-width: 460px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    /* Evita o scroll horizontal */
+    word-wrap: break-word;
+    /* Quebra palavras longas para evitar scroll horizontal */
+    font-size: 14px;
+    line-height: 1.6;
+    color: #2c3e50;
+}
+
+/* Animação suave ao carregar */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
     }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Barra de rolagem moderna */
+.medical-info-text::-webkit-scrollbar {
+    width: 4px;
+}
+
+.medical-info-text::-webkit-scrollbar-thumb {
+    background-color: #88B04B;
+    border-radius: 8px;
+}
+
+.medical-info-text::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
 }
 
 .actions {
