--- a/src/app/components/pets/pet-info-qrcode/pet-info-qrcode.component.css
+++ b/src/app/components/pets/pet-info-qrcode/pet-info-qrcode.component.css
@@ -61,7 +61,7 @@
 
 .pet-details,
 .owner-details {
-    width: 48%;
+    width: 100%;
 }
 
 .pet-details ul,
@@ -74,6 +74,38 @@
 .owner-details li {
     margin: 10px 0;
     font-size: 16px;
+}
+
+
+.medical-info {
+    background: #f5f7fa;
+    border-radius: 12px;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+.medical-info h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #34495e;
+}
+
+.medical-info-text {
+    background: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    max-height: 150px;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    word-wrap: break-word;
+    font-size: 14px;
+    line-height: 1.6;
+    color: #2c3e50;
 }
 
 .pet-details li span,
