qrcode in pet info

--- a/src/app/components/pets/info-pet/info-pet.component.html
+++ b/src/app/components/pets/info-pet/info-pet.component.html
@@ -5,6 +5,7 @@
             <h2 class="name">{{data.name}}</h2>
             <h4 class="breed">{{data.breed}}</h4>
         </div>
+        <img [src]="data.qrCode" alt="">
     </div>
     <div class="pet-info">
         <!-- <h4>Tipo <span>{{data.type}}</span></h4> -->
